# soil

./: README.md  app.py  area.c  file.c  lights.py  motortest1.py  raspberry.py  read_and_plot.py  rgbcamera.py  servo-pid.py  servo_manual_update.py  spectroscope.py  starloop.c  starloop_test.c  test.c  test.cpp  testgit.c
NRF24/: receiver.py  transmitter.py
NRF24/2-way/: base-station.py  box.py  nrf-laptop.py
NRF24/nrf-led/: led.py  nrf-led.ino
NRF24/nrf24/: nrf24.ino
arduino/: 4_led_blink_sync.ino
arduino/l293d_motor/: l293d_motor.ino
dht11_ard/: dht11_ard.ino
duplex/: client.py  client1.py  server.py  server1.py
inter-domain/3-gas-test/: 3-gas-test.ino
inter-domain/calibrate/: calibrate.ino
openCV/: 1rbgclick.py  CMakeLists.txt  cam.py  cvtest.cpp  hughcircle.cpp  opencamera.cpp  rgbcam.py  rgbclick.py
sabertooth/: sabergame.py  sabergui.py  saberslider.py
static/css/: experiment-style.css  styles.css
templates/: camera.html  camera_feed.html  experiment.html  gas.html  humidity.html  video.html
